force-app/main/default/objects/To_Do__c/To_Do__c.object-meta.xml
<CustomObject>
    <label>BT To Do</label>
    <nameField>
        <displayFormat>TD# {000000}</displayFormat>
        <label>To Do #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT To Do&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>