force-app/main/default/objects/To_Do__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Resource</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>To_Do_s</relationshipName>
    <type>Lookup</type>
</CustomField>