force-app/main/default/objects/To_Do__c/fields/Assigned_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>To_Do_s</relationshipName>
    <type>Lookup</type>
</CustomField>