force-app/main/default/objects/To_Do__c/fields/Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Item</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipName>To_Do_s</relationshipName>
    <type>Lookup</type>
</CustomField>